--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,13 @@
     padding: 0;
 }
 
+html,
+body,
+#root {
+    overflow-x: hidden;
+    max-width: 100%;
+}
+
 html {
     scroll-behavior: smooth;
 }
